# ioccheck

./: .coveragerc  .flake8  .ioccheck  .pylintrc  .typo-ci.yml  LICENSE  README.md  noxfile.py  pyproject.toml  pytest.ini  test.py
.circleci/: config.yml
.github/workflows/: coverage.yml  docs.yml  github_release.yml  lint.yml  main.yml
docs/source/: api_docs.rst  conf.py  index.rst  iocs.rst  quickstart.rst  services.rst  usage.rst
docs/source/iocs/: hash.rst  ioc.rst  ip.rst
docs/source/services/: malwarebazaar.rst  shodan.rst  virustotal.rst
examples/: eicar.py
hashcheck/: __init__.py  cli.py  exceptions.py  hash.py  ioc.py  ip.py  logger.py  reports.py  services.py  types.py
hashcheck/formatters/: __init__.py  malware_bazaar.py  malwarebazaar.py  virustotal.py
hashcheck/reports/: __init__.py  virustotal.py
hashcheck/services/: __init__.py  malwarebazaar.py  service.py  shodan.py  virustotal.py
hashcheck/virustotal/: __init__.py
ioccheck/: __init__.py  __main__.py  cli.py  exceptions.py  hash.py  ioc.py  ioc_types.py  ip.py  test.py  types.py
ioccheck/cli/: __init__.py  __main__.py  cli.py  printers.py
ioccheck/cli/formatters/: __init__.py  formatter.py  malwarebazaar.py  shodan.py  twitter.py  virustotal.py
ioccheck/formatters/: __init__.py  malwarebazaar.py  virustotal.py
ioccheck/iocs/: __init__.py  hash.py  ioc.py  ip.py
ioccheck/reports/: __init__.py  hello.py  html_report.py  ip_report.py  report.py
ioccheck/reports/templates/: hash_template.html  ip_template.html  layout.html  template.html
ioccheck/services/: __init__.py  data_types.py  malwarebazaar.py  service.py  shodan.py  twitter.py  virustotal.py
ioccheck/shared/: __init__.py
test/: conftest.py  ioccheck_bad_config_1.in  ioccheck_bad_config_2.in  test_cli.py  test_config_file.py  test_hash_creation.py  test_hash_report.py  test_ip_creation.py  test_malware_bazaar.py  testdata.txt
test/data/: ioccheck_bad_config_3.in  ioccheck_bad_config_4.in  malwarebazaar_mock_response_1.json  malwarebazaar_mock_response_2.json  shodan_mock_response_1.json  twitter_mock_response_1.json  virustotal_mock_response_1.json
test/data/config/: credentials
test/data/malwarebazaar_bulk_responses/: malwarebazaar_test_response_0.json  malwarebazaar_test_response_3.json  malwarebazaar_test_response_30.json  malwarebazaar_test_response_31.json  malwarebazaar_test_response_32.json  malwarebazaar_test_response_33.json  malwarebazaar_test_response_34.json  (+71 more)
test/test_formatters/: test_malwarebazaar_formatter.py  test_shodan_formatter.py  test_virustotal_formatter.py
test/test_services/: test_malwarebazaar_service.py  test_malwarebazaar_service_bulk.py  test_shodan_service.py  test_twitter_service.py  test_virustotal_service.py  test_virustotal_service_bulk.py
tests/: fixtures.py  generate_test_data.py  test_hashcheck.py  test_virustotal.py
tests/data/: vt_eicar_detections.py
(+77 files in other folders)
