[tool.poetry]
name = "ioccheck"
version = "v0.3.0-beta.1"
description = "A tool for simplifying the process of researching IOCs."
authors = ["ranguli <hello@joshmurphy.ca>"]

[tool.poetry.dependencies]
python = "^3.7.3"
vt-py = "^0.6.1"
ratelimit = "^2.2.1"
backoff = "^1.10.0"
tabulate = "^0.8.9"
termcolor = "^1.1.0"
click = "^7.1.2"
requests = "^2.25.1"
"hurry.filesize" = "^0.9"
shodan = "^1.25.0"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
bandit = "^1.7.0"
nox = "^2020.12.31"
isort = "^5.7.0"
mypy = "^0.812"
coverage = "^5.5"
sphinx = "^3.5.3"
sphinx_rtd_theme = "^0.5.1"
nox-poetry = "^0.8.4"
pytest-cov = "^2.11.1"
pylint = "^2.7.2"

[tool.poetry.scripts]
ioccheck = "ioccheck.cli.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
