[tool.poetry]
name = "ioccheck"
version = "v0.4.0"
description = "A tool for simplifying the process of researching IOCs."
authors = ["ranguli <hello@joshmurphy.ca>"]

[tool.poetry.dependencies]
python = "^3.7.3"
vt-py = "^0.6.1"
ratelimit = "^2.2.1"
backoff = "^1.10.0"
tabulate = "^0.8.9"
termcolor = "^1.1.0"
click = ">=7.1.2,<9.0.0"
requests = "^2.25.1"
"hurry.filesize" = "^0.9"
shodan = "^1.25.0"
pyfiglet = "^0.8.post1"
emoji = "^1.2.0"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.2"
bandit = "^1.7.0"
nox = "^2021.6.12"
isort = "^5.7.0"
mypy = "^0.910"
coverage = "^5.5"
sphinx = "^3.5.3"
sphinx_rtd_theme = "^0.5.2"
nox-poetry = "^0.8.6"
pytest-cov = "^2.11.1"
pylint = "^2.9.0"
types-requests = "^2.25.6"
types-tabulate = "^0.8.2"
types-termcolor = "^1.1.1"
types-emoji = "^1.2.4"

[tool.poetry.scripts]
ioccheck = "ioccheck.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
